[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.2",
    "polars>=1.35.1",
    "numpy>=2.3.4",
    "joblib>=1.5.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
